# adk

./: .gitignore  README.md  agent.py  create_simplified_database.py  gst_filing.db  gstr1_template.py  pyproject.toml  spotify.db  streamlit_app.py  test_direct_categorization.py  test_filename_preservation.py  test_gstr2_mock.py  test_pdf_categorization_simple.py  web_server.py
auth/: jwt_utils.py
client/: .gitignore
client/web/: package-lock.json  package.json
client/web/src/: App.tsx  index.css
client/web/src/api/: auth.ts  chat.ts  cleanup.ts  client.ts  documents.ts  filing.ts  index.ts  reports.ts
client/web/src/components/: DocUpload.tsx  ExcelGrid.tsx  FilingWizard.tsx  FloatingChatBot.tsx  Navbar.tsx
client/web/src/components/filing/: ActionButtons.tsx  GSTR1Summary.tsx  InteractiveDataPreview.tsx
client/web/src/components/ui/: Button.tsx  Card.tsx  DatePicker.tsx  Input.tsx
client/web/src/hooks/: useFilingData.ts
client/web/src/pages/: Dashboard.tsx  FileUpload.tsx  FilingDetails.tsx  FilingReport.tsx  Login.tsx  Register.tsx  SmartAnalysis.tsx
client/web/src/store/: appStore.ts  authStore.ts
client/web/src/types/: index.ts
client/web/src/utils/: columnDefinitions.ts  excelExport.ts
models/: __init__.py  api_requests.py  gstr1_template.py
routes/: auth_routes.py  chat_routes.py
server/: .env  .gitignore  agent.py  check_db.py  database.py  gst_filing.db  gst_filing_app.py  gstr1_template.py  main.py  pyproject.toml  schemas.py  shared_instances.py  test_streamlit.py  test_system.py
server/agents/: categorization_agent.py  chat_agent.py  date_filtering_agent.py  document_processing_agent.py  gstr1_extraction_agent.py  gstr1_template_agent.py  gstr2_extraction_agent.py  gstr2_template_agent.py
server/auth/: dependencies.py
server/database/: database.py
server/models/: __init__.py  auth_models.py  document.py  gstr1.py  user.py
server/routes/: __init__.py  categorization_routes.py  chat_routes.py  cleanup_routes.py  document_routes.py  filing_routes.py  gstr1_routes.py  reports_routes.py
server/schemas/: simplified_schemas.py
server/storage/gstr1/: 09999416-f3f5-43df-ba54-3ac9b4c7c850.json  39083b31-0a6b-4356-bcef-40258c15a991.json  58d3786a-8bf8-41dc-b8d5-30c92e2cd78b.json  5fc485f4-df30-419b-acdb-ea8f3ae9dc0e.json  7b4e8739-50f7-48d9-9ae0-5092bd3e3175.json  a382c917-1612-4fea-9413-1b54bb931846.json  ab5baea2-c8b1-471c-83ca-57701e7e4294.json  bcecb1a9-9b82-4abe-9489-9e70375875fd.json
server/test/: response.json  test_categorization_pdfs.py  test_gstr2_extraction.py  test_gstr2_filing.py  test_gstr2_template.py
server/usecases/: __init__.py  chat_usecase.py  document_usecase.py  gstr1_usecase.py  shared_instances.py
ui/: app.py
usecases/: __init__.py  shared_instances.py
