[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adk-doc-chat"
version = "0.1.0"
description = "Document parser and chat functionality using ADK"
authors = [{name = "User", email = "user@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.0.0",
    "docling>=1.0.0",
    "docling-core>=1.0.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["adk*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
