[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adk-doc-chat"
version = "0.1.0"
description = "Document parser and chat functionality using ADK"
authors = [{name = "User", email = "user@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "google-adk>=0.0.1",
    "google-generativeai>=0.3.0",
    "docling>=1.0.0",
    "pydantic>=2.5.0",
    "streamlit>=1.28.0",
    "sqlite3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["adk*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
